<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:singleSelection="true"
        app:checkedButton="@+id/day7"
        app:selectionRequired="true">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/day7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_7"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/day30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_30"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/day365"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_365"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true">
        <ImageButton
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/left"
            android:background="#00000000"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/next"
            android:text=" ~ "
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/prev"
            app:layout_constraintEnd_toStartOf="@+id/next"/>
        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right"
            android:background="#00000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>